# FlowGate-VerifyOps

./: .gitignore  CMakeLists.txt  README.md
docs/: product-requirements.md  verification-strategy.md
product/src/: main.cpp
