cmake_minimum_required(VERSION 3.20)

project(
    FlowGateVerifyOps
    VERSION 0.1.0
    LANGUAGES CXX
)

set(CMAKE_CXX_STANDARD 20)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CXX_EXTENSIONS OFF)

add_executable(
    flowgate
    product/src/main.cpp
)

target_include_directories(
    flowgate
    PRIVATE
        ${CMAKE_CURRENT_SOURCE_DIR}/product/include
)